<resources>
    <string name="app_name">TeamN3v3rMind</string>
    <string name="Loading">Loading</string>
    <string name="Post">Post</string>
    <string name="download">Download</string>
    <string name="DataBase">DataBase</string>
    <string name="title_activity_nay">TeamN3v3rMind</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nav">Nav</string>
    <string name="PostOnDataBase">Post</string>
    <string name="Streams">Streams</string>
    <string name="btn_Registar">Sign up</string>
    <string name="Feed">Feed</string>
    <string name="Perfil">Profile</string>
    <string name="action_search">Search</string>
    <string name="menu_Feed">Feed</string>
    <string name="menu_Defenicoes">Settings</string>
    <string name="menu_moresettings">More Settings</string>
    <string name="Welcome_password">Password</string>
    <string name="Welcome_Nome">User</string>



</resources>
